deploy/openshift/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sankey-scorecard-postgres
  labels:
    app: sankey-scorecard
    component: postgres
spec:
  selector:
    app: sankey-scorecard
    component: postgres
  ports:
    - name: postgresql
      port: 5432
      targetPort: 5432
      protocol: TCP
  type: ClusterIP
