deploy/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sankey-scorecard
  labels:
    app: sankey-scorecard
    shard: ${ROUTE_SHARD}
spec:
  host: "${ROUTE_HOST}"
  to:
    kind: Service
    name: sankey-scorecard
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
